--- a/spec/fixtures/views/Score_List_edit_list_entity_updates_entity-show-team-with-edit/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_entity_updates_entity-show-team-with-edit/view.html
@@ -137,7 +137,7 @@ Erweitert
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Löschangriff Nass - Frauen - Lauf 1</h4>
+<h4 class='m-0 py-2 ps-3'>Hakenleitersteigen - Frauen - Lauf 1</h4>
 </div>
 </div>
 <table class='table much-data score-list-channel' data-score-list-editable='1' data-score-list-id='UUID'>
@@ -149,6 +149,8 @@ Erweitert
 <th>
 <span class='thead-track'>Bahn</span>
 </th>
+<th>Nachname</th>
+<th>Vorname</th>
 <th>Mannschaft</th>
 <th>Zeit</th>
 </tr>
@@ -161,14 +163,54 @@ Erweitert
 1
 </td>
 <th class='track'>1</th>
+<td>Meier1</td>
+<td>Alfred1</td>
 <td>
-Frauen-Team
+
+</td>
+<td class='time-col'>
+12,34
+</td>
+<td class='text-end'>
+<a title="Teilnehmer ändern" class="btn-xs btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit_entity/UUID"><i class="far fa-user-edit"></i></a>
+</td>
+
+</tr>
+
+<tr class='next-run' data-id='UUID'>
+<td class='run'>
+</td>
+<th class='track'>2</th>
+<td>Meier2</td>
+<td>Alfred2</td>
+<td>
+
 </td>
 <td class='time-col'>
 
 </td>
 <td class='text-end'>
-<a title="Zeiten bearbeiten" class="btn-xs btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/runs/1/edit"><i class="far fa-edit"></i></a>
+<a title="Teilnehmer ändern" class="btn-xs btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit_entity/UUID"><i class="far fa-user-edit"></i></a>
+</td>
+
+</tr>
+
+<tr class='' data-id='UUID'>
+<td class='run'>
+<a id='jump-run-3'></a>
+2
+</td>
+<th class='track'>1</th>
+<td>Meier3</td>
+<td>Alfred3</td>
+<td>
+
+</td>
+<td class='time-col'>
+
+</td>
+<td class='text-end'>
+<a title="Teilnehmer ändern" class="btn-xs btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit_entity/UUID"><i class="far fa-user-edit"></i></a>
 </td>
 
 </tr>
@@ -177,6 +219,8 @@ Frauen-Team
 <td class='run'>
 </td>
 <th class='track'>2</th>
+<td></td>
+<td></td>
 <td>
 
 </td>
@@ -223,8 +267,7 @@ Frauen-Team
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/move">Reihenfolge bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit_times">Zeiten im Block eintragen</a>
 <a class=" btn btn-light btn-sm" data-remote="true" href="/2024/mv-cup/score/lists/UUID/select_entity">Teilnehmer hinzufügen</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID?edit_index=1">Teilnehmer ändern</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID?destroy_index=1">Teilnehmer entfernen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Zeiten eintragen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories/copy_list/UUID">Startliste klonen</a>
 </div>
 
@@ -268,7 +311,7 @@ Frauen-Team
 </div>
 <div class='card-body'>
 <div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Frauen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID">Hakenleitersteigen - Frauen</a>
 </div>
 
 </div>
