--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
@@ -278,6 +278,7 @@ Erweitert
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/move">Reihenfolge bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit_times">Zeiten im Block eintragen</a>
 <a class=" btn btn-light btn-sm" data-remote="true" href="/2024/mv-cup/score/lists/UUID/select_entity">Teilnehmer hinzufügen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID?edit_index=1">Teilnehmer ändern</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID?destroy_index=1">Teilnehmer entfernen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories/copy_list/UUID">Startliste klonen</a>
 </div>
