--- a/app/views/competitions/score/lists/_list_entry_with_times.html.haml
+++ b/app/views/competitions/score/lists/_list_entry_with_times.html.haml
@@ -8,7 +8,9 @@
     = entry&.human_time
   - if editable
     %td.text-end
-      - if track == 1 && destroy_index.nil?
+      - if track == 1 && destroy_index.nil? && edit_index.nil?
         = short_edit_link edit_competition_score_list_run_path(slug: list.competition.slug, year: list.competition.year, list_id: list.id, run:), title: 'Zeiten bearbeiten', class: 'btn-xs'
       - if entry.present? && destroy_index
         = short_destroy_link destroy_entity_competition_score_list_path(slug: list.competition.slug, year: list.competition.year, id: list.id, entry_id: entry.id), title: 'Aus Liste entfernen', class: 'btn-xs'
+      - if entry.present? && edit_index
+        = short_edit_link edit_entity_competition_score_list_path(slug: list.competition.slug, year: list.competition.year, id: list.id, entry_id: entry.id), title: 'Teilnehmer ändern', class: 'btn-xs', fa: 'user-edit'
