--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_best_error/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_best_error/view.html
@@ -217,6 +217,14 @@ Löschangriff Nass
 <td class=''>Man wählt man eine Ergebnisliste aus, von der die X Besten auf der neuen Liste erscheinen.</td>
 </tr>
 
+<tr>
+<th>Bedingungen</th>
+<th><a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_conditions/new?list_factory_id=UUID">Hinzufügen</a></th>
+</tr>
+<tr>
+<td colspan='2'>
+</td>
+</tr>
 </table>
 
 </div>
