--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change_finish/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change_finish/view.html
@@ -224,6 +224,14 @@ Löschangriff Nass
 <th>Vorherige Startliste</th>
 <td><a href="/2024/mv-cup/score/lists/UUID">Löschangriff Nass - Männer - Lauf 1</a></td>
 </tr>
+<tr>
+<th>Bedingungen</th>
+<th><a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_conditions/new?list_factory_id=UUID">Hinzufügen</a></th>
+</tr>
+<tr>
+<td colspan='2'>
+</td>
+</tr>
 </table>
 
 </div>
