--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_single_finish/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_single_finish/view.html
@@ -220,6 +220,14 @@ Löschangriff Nass
 <td class=''>Alle Einzelstarter werden zufällig angeordnet.</td>
 </tr>
 
+<tr>
+<th>Bedingungen</th>
+<th><a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_conditions/new?list_factory_id=UUID">Hinzufügen</a></th>
+</tr>
+<tr>
+<td colspan='2'>
+</td>
+</tr>
 </table>
 
 </div>
