--- a/spec/fixtures/views/Score_List_move_list_moves_entries-move/view.html
+++ b/spec/fixtures/views/Score_List_move_list_moves_entries-move/view.html
@@ -334,8 +334,9 @@ Lauf tauschen
 <a class=" btn-block btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Abbrechen</a>
 </div>
 </div>
-<div class='d-grid gap-2' id='back-link'>
-<a class=" btn-block btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Zurück</a>
+<div class='d-grid gap-2'>
+<a id="back-link" class=" btn-block btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Zurück</a>
+<a class=" btn-block btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/list_conditions">Bedingungen</a>
 </div>
 
 </div>
