--- a/app/views/competitions/score/list_conditions/_index_table.html.haml
+++ b/app/views/competitions/score/list_conditions/_index_table.html.haml
@@ -3,7 +3,7 @@
     %th= resource_class.human_attribute_name(:track)
     %th= resource_class.human_attribute_name(:assessments)
     %th
-  - resource_collection.sort.each do |list_condition|
+  - resource_collection.sort_by(&:track).each do |list_condition|
     %tr
       %td= list_condition.track
       %td= list_condition.assessments.map(&:name).join(', ')
