--- a/spec/fixtures/views/People_People_managements_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-new/view.html
@@ -196,6 +196,10 @@ Keine Verknüpfung mit einer vorhandenen Person
 </div>
 
 <small class='form-text text-muted'>Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.</small>
+<fieldset class='group'>
+<div class="form-group text optional person_registration_hint"><label class="control-label text optional" for="person_registration_hint">Anmeldungshinweise</label><textarea class="form-control text optional" rows="4" name="person[registration_hint]" id="person_registration_hint">
+</textarea><small class="form-text text-muted">Diese Hinweise/Notizen sind nur für schreibberechtigte Nutzer zu sehen.</small></div>
+</fieldset>
 
 </div>
 <div class='card-footer'>
