--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-new-with-errors/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-new-with-errors/view.html
@@ -165,6 +165,10 @@ Keine Verknüpfung mit einer vorhandenen Mannschaft
 </div>
 
 <small class='form-text text-muted'>Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.</small>
+<fieldset class='group'>
+<div class="form-group text optional team_registration_hint"><label class="control-label text optional" for="team_registration_hint">Anmeldungshinweise</label><textarea class="form-control text optional" rows="4" name="team[registration_hint]" id="team_registration_hint">
+</textarea><small class="form-text text-muted">Diese Hinweise/Notizen sind nur für schreibberechtigte Nutzer zu sehen.</small></div>
+</fieldset>
 
 </div>
 <div class='card-footer'>
