--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
@@ -228,6 +228,7 @@ Mannschaftswertung
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/accesses">Verwalter</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/deletion/new">Löschen</a>
 </div>
 
