--- a/spec/fixtures/views/Team_when_user_is_a_applicant_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/Team_when_user_is_a_applicant_uses_CRUD-new/view.html
@@ -121,15 +121,11 @@ Keine Verknüpfung mit einer vorhandenen Mannschaft
 
 <small class='form-text text-muted'>Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.</small>
 <fieldset class='group'>
-<div class='col-md-6'>
-<strong>Angemeldet durch:</strong>
-Other Meier
-</div>
 <div class="form-group text optional team_registration_hint form-group-valid"><label class="control-label text optional" for="team_registration_hint">Anmeldungshinweise</label><textarea class="form-control text optional" rows="4" name="team[registration_hint]" id="team_registration_hint">
 Mannschaftsleiter: Other Meier
 E-Mail-Adresse: other@meier.de
 Telefonnummer: 1234
-</textarea></div>
+</textarea><small class="form-text text-muted">Diese Hinweise/Notizen sind nur für schreibberechtigte Nutzer zu sehen.</small></div>
 </fieldset>
 
 </div>
