--- a/spec/fixtures/views/Team_when_user_is_a_applicant_uses_CRUD-show-with-hint/view.html
+++ b/spec/fixtures/views/Team_when_user_is_a_applicant_uses_CRUD-show-with-hint/view.html
@@ -126,7 +126,12 @@ Keine Verknüpfung mit einer vorhandenen Mannschaft
 </tr>
 <tr>
 <th>Angemeldet durch</th>
-<td>Other Meier</td>
+<td>
+<div class='fa-pull-right'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/accesses"><i class="far fa-edit"></i></a>
+</div>
+Other Meier
+</td>
 </tr>
 <tr>
 <th>
@@ -191,6 +196,7 @@ Mannschaftswertung
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/accesses">Verwalter</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/deletion/new">Löschen</a>
 </div>
 
