--- a/app/views/competitions/teams/show.html.haml
+++ b/app/views/competitions/teams/show.html.haml
@@ -36,10 +36,13 @@
           %td{ colspan: 2 }
             = render('connected', team: @team, remove: false)
         - if can?(:edit, @team)
-          - if @team.applicant.present?
+          - if @team.users.exists?
             %tr
               %th Angemeldet durch
-              %td= @team.applicant.name
+              %td
+                .fa-pull-right
+                  = icon_link_btn('far fa-edit', competition_team_accesses_path(team_id: @team.id))
+                = @team.users.map(&:name).join(', ')
           - if @team.registration_hint.present?
             %tr
               %th
@@ -94,6 +97,7 @@
             = btn_link_to 'Name bearbeiten', { action: :edit }
             = btn_link_to 'Anmeldungshinweise bearbeiten', { action: :edit, form: 'registration_hint' }
             = btn_link_to 'Bedingung für Startliste hinzufügen', new_competition_team_list_restriction_path(team1_id: @team.id)
+            = btn_link_to 'Verwalter', competition_team_accesses_path(team_id: @team.id)
             = btn_link_to 'Löschen', new_competition_team_deletion_path
 
   - if can?(:edit, @team) || @team.people.exists?
