--- a/spec/fixtures/views/People_when_user_is_a_applicant_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/People_when_user_is_a_applicant_uses_CRUD-new/view.html
@@ -137,15 +137,7 @@ Benutzer
 <i class='far fa-check me-2'></i>
 Verknüpft mit <strong class="first-name"></strong> <strong class="last-name"></strong>
 <a target="_blank" rel="noopener" title="Informationen über diese Person auf Feuerwehrsport-Statistik.de aufrufen" class="btn btn-sm btn-light ms-2" href="https://feuerwehrsport-statistik.de/people/"><i class='far fa-arrow-up-right-from-square'></i>
-</a><div class='row mt-4' data-gender='female' id='gender-warning'>
-<div class='col-md-8'>
-<div class='alert alert-warning'>
-<i class='far fa-warning'></i>
-Das Geschlecht passt nicht, soll das so?
-</div>
-</div>
-</div>
-</div>
+</a></div>
 <div class='alert alert-warning mb-0' id='fire-sport-not-connected'>
 <i class='far fa-warning me-2'></i>
 Keine Verknüpfung mit einer vorhandenen Person
@@ -153,15 +145,11 @@ Keine Verknüpfung mit einer vorhandenen Person
 
 <small class='form-text text-muted'>Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.</small>
 <fieldset class='group'>
-<div class='col-md-6'>
-<strong>Angemeldet durch:</strong>
-Other Meier
-</div>
 <div class="form-group text optional person_registration_hint form-group-valid"><label class="control-label text optional" for="person_registration_hint">Anmeldungshinweise</label><textarea class="form-control text optional" rows="4" name="person[registration_hint]" id="person_registration_hint">
 Mannschaftsleiter: Other Meier
 E-Mail-Adresse: other@meier.de
 Telefonnummer: 1234
-</textarea></div>
+</textarea><small class="form-text text-muted">Diese Hinweise/Notizen sind nur für schreibberechtigte Nutzer zu sehen.</small></div>
 </fieldset>
 
 </div>
