--- a/app/views/competitions/score/results/_result_table_single.html.haml
+++ b/app/views/competitions/score/results/_result_table_single.html.haml
@@ -19,7 +19,7 @@
   - rows.each do |row|
     %tr
       - if places
-        %td.hide-xs #{result.place_for_row(row)}.
+        %td.hide-xs #{row.place}.
       - if result.competition.show_bib_numbers?
         %td.hide-xs= row.entity&.bib_number
       %td
