Texte für Verwalter erweitern

--- a/spec/fixtures/views/Competitions_UserTeamAccessesController_accesses_managements_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/Competitions_UserTeamAccessesController_accesses_managements_uses_CRUD-new-error/view.html
@@ -131,6 +131,9 @@ Erweitert
 Hallo,
 
 ich habe bei feusport.de die Mannschaft »Frauen-Team« für dich angelegt. Wenn du auf den nachfolgenden Link klickst, kannst du die Kontrolle über die Mannschaft übernehmen.
+
+Du kannst diese E-Mail auch an den entsprechenden Trainer weiterleiten, damit er diese Eintragungen vornehmen kann.
+
 Viele Grüße
 
 Alfred Meier</textarea></div>
